fixed homepage z-indexes

--- a/smallslive/static/sass/components/_homepage-events.scss
+++ b/smallslive/static/sass/components/_homepage-events.scss
@@ -140,6 +140,7 @@
   border-bottom-color: $main-accent-color;
   border-width: 20px;
   margin-left: -20px;
+  z-index: 10001;
 }
 
 #upcoming-carousel {
